--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/zombiepaladin/simple-chat/issues"
   },
-  "homepage": "https://github.com/zombiepaladin/simple-chat#readme"
+  "homepage": "https://github.com/zombiepaladin/simple-chat#readme",
+  "dependencies": {
+    "socket-io": "^1.0.0",
+    "socket.io": "^1.7.3"
+  }
 }
